Fixed fonts not loading on safari browser

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,17 @@
 @font-face {
   font-family: "Gilroy";
-  src: local("Gilroy"), url("./assets/fonts/Gilroy-Light.otf") format("otf"),
-    url("./assets/fonts/Gilroy-ExtraBold.otf") format("otf");
+  src: url("./assets/fonts/Gilroy-Light.woff2") format("woff2"),
+    url("./assets/fonts/Gilroy-Light.woff") format("woff"),
+    url("./assets/fonts/Gilroy-Light.ttf") format("truetype");
+  font-weight: 300;
+}
+
+@font-face {
+  font-family: "Gilroy";
+  src: url("./assets/fonts/Gilroy-Extrabold.woff2") format("woff2"),
+    url("./assets/fonts/Gilroy-Extrabold.woff") format("woff"),
+    url("./assets/fonts/Gilroy-Extrabold.ttf") format("truetype");
+  font-weight: 800;
 }
 
 body {
